--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 </div>
 
                 <div class="work__card mix movil">
-                    <img src="assets/img/work2.PNG" alt="" class="work__img">
+                    <img src="assets/img/work2.jpeg" alt="" class="work__img">
 
                     <h3 class="work__title">Design location</h3>
                 </div>
@@ -344,7 +344,7 @@
                 </div>
 
                 <div class="work__card mix movil">
-                    <img src="assets/img/work5.PNG" alt="" class="work__img">
+                    <img src="assets/img/work5.jpeg" alt="" class="work__img">
 
                     <h3 class="work__title">The STO route</h3>
                 </div>
