--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         <div class="contact__card">
                             <i class='bx bx-mail-send contact__card-icon'></i>
                             <h3 class="contact__card-title">Email</h3>
-                            <span class="contact__card-data">alwasi@upi.edu</span>
+                            <span class="contact__card-data">alwasiwasi29@gmail.com</span>
 
                             <a href="mailto:alwasi@upi.edu" target="_blank" class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
@@ -460,7 +460,7 @@
                     </a>
                 </li>
                 <li class="footer__social-item">
-                    <a href="https://www.instagram.com/alwasiwasi01/" target="_blank" class="footer__social-link">
+                    <a href="https://www.instagram.com/alwasi_mf/" target="_blank" class="footer__social-link">
                         <i class='bx bxl-instagram footer__social-icon'></i>
                     </a>
                 </li>
