--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h3 class="home__education">Undergraduated Student</h3>
 
                     <div class="home__button">
-                        <a download="" href="assets/pdf/wasi-Cv.pdf" class="button button--ghost">
+                        <a download="" href="assets/pdf/CV-Alwasi.pdf" class="button button--ghost">
                             Download CV
                         </a>
 
