--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="home__data">
                     <span class="home__greeting">Hello, I'm</span>
                     <h1 class="home__name">Alwasi Muhrijafiatna</h1>
-                    <h3 class="home__education">Electrical Engineering Education Bachelor</h3>
+                    <h3 class="home__education">Electrical Engineering Ed. Bachelor</h3>
 
                     <div class="home__button">
                         <a download="" href="assets/pdf/CV-Alwasi.pdf" class="button button--ghost">
@@ -141,7 +141,7 @@
                     </div>
 
                     <p class="about__description">
-                    A Fresh Graduate from Electrical Engineering Education Department in Indonesia University of Education 
+                    A Fresh Graduate from Faculty of Engineering and Industrial Education in Indonesia University of Education 
                     with GPA of 3.54 – 4.00 and very interested in field of AI
                     programming and Electrical Telecommunication with a total of 3 year experience as an aviation
                     electronics student at SMKN 12 Bandung. Obtained competency certification in the field of
@@ -432,9 +432,9 @@ Instrument in Aircraft subject </span>
                         <div class="contact__card">
                             <i class='bx bxl-instagram contact__card-icon'></i>
                             <h3 class="contact__card-title">Instagram</h3>
-                            <span class="contact__card-data">@alwasiwasi01</span>
+                            <span class="contact__card-data">@alwasi_mf</span>
 
-                            <a href="https://www.instagram.com/alwasiwasi01/" target="_blank" class="contact__button">
+                            <a href="https://www.instagram.com/alwasi_mf/" target="_blank" class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
                             </a>
                         </div>
