--- a/index.html
+++ b/index.html
@@ -246,6 +246,116 @@ Instrument in Aircraft subject </span>
             <h2 class="section__title">My Projects</h2>
 
             <div class="services__container container grid">
+                 <div class="services__card">
+                    <h3 class="services__title">Machine Learning & <br> Deep Learning</h3>
+
+                    <span class="services__button">
+                        See More <i class='bx bx-right-arrow services__icon'></i>
+                    </span>
+
+                    <div class="services__modal">
+                        <div class="services__modal-content">
+                            <i class='bx bx-x services__modal-close'></i>
+
+                            <h3 class="services__modal-title">Application of Machine Learning and Deep Learning for Horticultural Plants
+                            Identification web Based</h3>
+
+                            <p class="services__modal-description">
+                            Created a web based application to identify a horticulture plants, weeds, pest, and make a
+                            estimated cost to cultivate a crop. Using tools and programme language such as:
+                            </p>
+
+                            <ul class="services__modal-list">
+                                <li class="services__modal-item">
+                                    <i class='bx bx-check-circle'></i>
+                                    <p class="services__modal-info">
+                                        Visual Studio Code
+                                    </p>
+                                </li>
+                                <li class="services__modal-item">
+                                    <i class='bx bx-check-circle'></i>
+                                    <p class="services__modal-info">
+                                    Jupyter
+                                    </p>
+                                </li>
+                                <li class="services__modal-item">
+                                    <i class='bx bx-check-circle'></i>
+                                    <p class="services__modal-info">
+                                    Flask
+                                    </p>
+                                </li>
+                                <li class="services__modal-item">
+                                    <i class='bx bx-check-circle'></i>
+                                    <p class="services__modal-info">
+                                        Django
+                                    </p>
+                                </li>
+                                <li class="services__modal-item">
+                                    <i class='bx bx-check-circle'></i>
+                                    <p class="services__modal-info">
+                                        HTML
+                                    </p>
+                                </li>
+                                <li class="services__modal-item">
+                                    <i class='bx bx-check-circle'></i>
+                                    <p class="services__modal-info">
+                                        CSS
+                                    </p>
+                                </li>
+                                <li class="services__modal-item">
+                                    <i class='bx bx-check-circle'></i>
+                                    <p class="services__modal-info">
+                                        JS
+                                    </p>
+                                </li>   
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="services__card">
+                    <div class="serv">
+                        <h3 class="services__title">Design and Develop <br> IoT Based Smartpot</h3>
+
+                        <span class="services__button">
+                            See More <i class='bx bx-right-arrow services__icon'></i>
+                        </span>
+                    </div>
+
+
+                    <div class="services__modal">
+                        <div class="services__modal-content">
+                            <i class='bx bx-x services__modal-close'></i>
+
+                            <h3 class="services__modal-title">IoT-based smart pot system</h3>
+
+                            <p class="services__modal-description">
+                            Design and Development of IoT-based smart pot system to optimize the growth and care of ornamental plants.
+                            </p>
+                            <ul class="services__modal-list">
+                                <li class="services__modal-item">
+                                    <i class='bx bx-check-circle'></i>
+                                    <p class="services__modal-info">
+                                        Design the SmartPot.
+                                    </p>
+                                </li>
+                                <li class="services__modal-item">
+                                    <i class='bx bx-check-circle'></i>
+                                    <p class="services__modal-info">
+                                        Develop the Program using C++.
+                                    </p>
+                                </li>
+                                <li class="services__modal-item">
+                                    <i class='bx bx-check-circle'></i>
+                                    <p class="services__modal-info">
+                                        Using IoT Cloud for Controlling and Monitoring.
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="services__card">
                     <div class="serv">
                         <h3 class="services__title">Design and Develop <br> IoT Trash Bin</h3>
