--- a/index.html
+++ b/index.html
@@ -469,9 +469,11 @@ Instrument in Aircraft subject </span>
 
             <div class="work__filters">
                 <span class="work__item active-work" data-filter='all'>All</span>
-                <span class=" work__item" data-filter='.web'>IoT</span>
+                <span class=" work__item" data-filter='.web'>IoT Trashbin</span>
                 <span class=" work__item" data-filter='.movil'>FTTH</span>
-                <span class=" work__item" data-filter='.design'>Python</span>
+                <span class=" work__item" data-filter='.design'>Osillator</span>
+                <span class=" work__item" data-filter='.design'>ML & DL</span>
+                <span class=" work__item" data-filter='.design'>Smartpot</span>
             </div>
 
             <div class="work__container container grid">
@@ -503,6 +505,18 @@ Instrument in Aircraft subject </span>
                     <img src="assets/img/work5.jpeg" alt="" class="work__img">
 
                     <h3 class="work__title">The STO route</h3>
+                </div>
+                
+                <div class="work__card mix web">
+                    <img src="assets/img/work6.jpeg" alt="" class="work__img">
+
+                    <h3 class="work__title">Interface Web</h3>
+                </div>
+                
+                <div class="work__card mix web">
+                    <img src="assets/img/work7.jpeg" alt="" class="work__img">
+
+                    <h3 class="work__title">Interface IoT Cloud</h3>
                 </div>
 
             </div>
