--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ Instrument in Aircraft subject </span>
                 <div class="work__card mix male">
                     <img src="assets/img/work6.jpeg" alt="" class="work__img">
 
-                    <h3 class="work__title">Interface Web</h3>
+                    <h3 class="work__title">Result for Recommendation Plant</h3>
                 </div>
                 <div class="work__card mix male">
                     <img src="assets/img/work7.jpeg" alt="" class="work__img">
