--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                     <p class="about__description">
                     A Fresh Graduate from Faculty of Engineering and Industrial Education in Indonesia University of Education 
-                    with GPA of 3.54 – 4.00 and very interested in field of AI
+                    graduated with cum laude honors and very interested in field of AI
                     programming and Electrical Telecommunication with a total of 3 year experience as an aviation
                     electronics student at SMKN 12 Bandung. Obtained competency certification in the field of
                     electronics and has participated in internship at PT Hutama Karya as MEP Engineering, Industrial
