--- a/index.html
+++ b/index.html
@@ -141,16 +141,15 @@
                     </div>
 
                     <p class="about__description">
-                    A Fresh Graduate from Faculty of Engineering and Industrial Education in Indonesia University of Education 
-                    graduated with cum laude honors and very interested in field of AI
-                    programming and Electrical Telecommunication with a total of 3 year experience as an aviation
-                    electronics student at SMKN 12 Bandung. Obtained competency certification in the field of
-                    electronics and has participated in internship at PT Hutama Karya as MEP Engineering, Industrial
-                    Work Practice with aviation maintenance expertise at PT Dewata Angkasa, Industrial Work
-                    Practice with Arduino programming at PT Inovindo Digital Media, Teacher in Aircraft Electronic
-                    Navigation Communication Installation Subject at SMKN 12 bandung, and has a license The
-                    Proficiency of English to Speakers of Other Languages from The Language Center, Indonesia
-                    University of Education. Has alongside excellent communication skills and pleasant personality.
+                    A fresh graduate from the Faculty of Engineering and Industrial Education at Indonesia University
+                    of Education, I graduated with cum laude honors and have a strong interest in AI programming
+                    and Electrical Telecommunication. I bring 3 years of experience as an aviation electronics student
+                    at SMKN 12 Bandung, during which I earned a competency certification in electronics. I have
+                    completed Industrial Work Practice in aviation maintenance at PT Dewata Angkasa and in
+                    Arduino programming at PT Inovindo Digital Media. Additionally, I taught Aircraft Electronic
+                    Navigation Communication Installation at SMKN 12 Bandung. I also hold a Proficiency in English
+                    for Speakers of Other Languages license from The Language Center, Indonesia University of
+                    Education. I possess excellent communication skills and a pleasant personality
                     </p>
 
                     <a href="#contact" class="button about__button-contact">Contact Me</a>
