--- a/index.html
+++ b/index.html
@@ -546,11 +546,11 @@ Instrument in Aircraft subject </span>
                         </div>
 
                         <div class="contact__card">
-                            <i class='bx bxl-whatsapp contact__card-icon'></i>
-                            <h3 class="contact__card-title">Whatsapp</h3>
-                            <span class="contact__card-data">+62 895-3597-76598</span>
+                            <i class='bx bxl-facebook contact__card-icon'></i>
+                            <h3 class="contact__card-title">Facebook</h3>
+                            <span class="contact__card-data">Alwasi Muhrijafiatna</span>
 
-                            <a href="https://api.whatsapp.com/send?phone=+62895359776598&text=Hey there!" target="_blank"
+                            <a href="https://web.facebook.com/alwasi.muhrijafiatna" target="_blank"
                                 class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
                             </a>
